Fixed button collapsing on mobile screens

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -4,6 +4,7 @@
   height: 3.4rem;
   padding: 0 2.4rem;
   font-size: 1.4rem;
+  min-width: fit-content;
   color: var(--color-white-100);
   background-color: var(--color-green-460);
   border-radius: 48px;
